@@ -13,10 +13,10 @@
   <parent>
     <groupId>org.terasoluna.gfw</groupId>
     <artifactId>terasoluna-gfw-parent</artifactId>
-    <version>5.7.2.RELEASE</version>
+    <version>5.7.3.RELEASE</version>
     <relativePath />
   </parent>
-  <version>1.8.2.RELEASE</version>
+  <version>1.8.3.RELEASE</version>
   <name>AIRLINE TICKET RESERVATION SYSTEM Parent POM</name>
   <description>AIRLINE TICKET RESERVATION SYSTEM Parent POM</description>
   <licenses>
@@ -215,6 +215,21 @@
       </dependency>
       <!-- == End Database == -->
 
+      <!-- == Begin Unit Test == -->
+      <dependency>
+        <groupId>io.github.bonigarcia</groupId>
+        <artifactId>webdrivermanager</artifactId>
+        <version>${webdrivermanager.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.httpcomponents.client5</groupId>
+        <artifactId>httpclient5</artifactId>
+        <version>${httpclient5.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <!-- == End Unit Test == -->
+
     </dependencies>
   </dependencyManagement>
 
@@ -228,7 +243,9 @@
     <org.codehaus.mojo.xml-maven-plugin.version>1.0.2</org.codehaus.mojo.xml-maven-plugin.version>
     <com.mycila.license-maven-plugin.version>4.1</com.mycila.license-maven-plugin.version>
     <!-- == Dependency Versions == -->
-    <postgresql.version>42.5.1</postgresql.version>
+    <postgresql.version>42.7.1</postgresql.version>
+    <webdrivermanager.version>5.6.3</webdrivermanager.version>
+    <httpclient5.version>5.2.3</httpclient5.version>
     <!-- == Project Properties == -->
     <project.root.basedir>${project.basedir}</project.root.basedir>
     <encoding>UTF-8</encoding>
@@ -252,6 +269,16 @@
       </activation>
       <properties>
         <java-version>17</java-version>
+        <cargo.jvmargs>-Xms512m -Xmx1024m -Djava.locale.providers=COMPAT,CLDR,SPI</cargo.jvmargs>
+      </properties>
+    </profile>
+    <profile>
+      <id>jdk21</id>
+      <activation>
+        <jdk>21</jdk>
+      </activation>
+      <properties>
+        <java-version>21</java-version>
         <cargo.jvmargs>-Xms512m -Xmx1024m -Djava.locale.providers=COMPAT,CLDR,SPI</cargo.jvmargs>
       </properties>
     </profile>
